objects/DT_Rule_Criterion__c.object
<CustomObject>
    <fields>
        <fullName>DT_Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equals To</fullName>
                    <default>true</default>
                    <label>Equals To</label>
                </value>
                <value>
                    <fullName>Not Equals To</fullName>
                </value>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
                <value>
                    <fullName>Greater Than Or Equals To</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Less Than Or Equals To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DT_Rule_Version__c</fullName>
        <label>Rule Version</label>
        <referenceTo>DT_Rule_Version__c</referenceTo>
        <relationshipName>DT_Rule_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DT_Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_Source_SObject_Field_Type__c</fullName>
        <label>Source SObject Field Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Source_SObject_Field__c</fullName>
        <description>API Name of the sObject field to be considered for comparison or source sobject field to be copied to task object field</description>
        <label>Source SObject Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Target_Task_Field__c</fullName>
        <label>Target Task Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Value_To_Compare__c</fullName>
        <description>Value to compare with source sObject field</description>
        <inlineHelpText>Can have different formats
Date Format: YYYY-MM-DD</inlineHelpText>
        <label>Value To Compare</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Value_to_Map__c</fullName>
        <inlineHelpText>Can have different formats
Date Format: YYYY-MM-DD</inlineHelpText>
        <label>Value to Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Version_Source_Field_Comb__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Version ID + Sobject Field Combination to prevent users from adding the same criteria again</description>
        <externalId>true</externalId>
        <label>Version ID + Source Field</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Rule Criterion</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Rule Criterion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Criteria</pluralLabel>
    <recordTypes>
        <fullName>Compare_Field_Value</fullName>
        <active>true</active>
        <description>Compare field value of sObject Records</description>
        <label>Compare Field Value</label>
    </recordTypes>
    <recordTypes>
        <fullName>Map_Object_Fields</fullName>
        <active>true</active>
        <description>Will be viewed when we want to populate fields of LTSS_Task_Info__c with fields of sObject record</description>
        <label>Map Object Fields To Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Map_Static_Values</fullName>
        <active>true</active>
        <description>Mapping Static Values</description>
        <label>Map Static Values To Task</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Operator_Can_Not_Be_Blank</fullName>
        <active>true</active>
        <description>Operator_Can_Not_Be_Blank for Compare</description>
        <errorConditionFormula>IF((ISPICKVAL(DT_Operator__c,&apos;&apos;) || ISPICKVAL(DT_Operator__c , &apos;--None--&apos;)) &amp;&amp;  RecordType.DeveloperName=$Label.DT_RECORD_TYPE_COMPARE, true , false)</errorConditionFormula>
        <errorDisplayField>DT_Operator__c</errorDisplayField>
        <errorMessage>Operator is mandatory for Compare Fields</errorMessage>
    </validationRules>
</CustomObject>